--- a/views/contactos.html
+++ b/views/contactos.html
@@ -57,7 +57,7 @@
 
       <div class="mb-3">
         <label for="email" class="form-label">Mail</label>
-        <input type="email" class="form-control border-primary" id="email" name="email" placeholder="@gmil.com" required>
+        <input type="email" class="form-control border-primary" id="email" name="email" placeholder="@correo.com" required>
       </div>
 
       <div class="mb-3">
